--- a/src/Components/Header/Navbar.module.scss
+++ b/src/Components/Header/Navbar.module.scss
@@ -7,20 +7,22 @@
     width: 100%;
     align-items: center;
     top: 0;
-    z-index: 99;
+    z-index: 1200;
     position: fixed;
-    padding: 16px;
-    background-color: #718355;
+    padding: 8px 16px;
+    height: fit-content;
+    background-color: #f5f5f5;
     img{
-        width: 80px;
-        height: 50px;
+        width: 100px;
+        height: 60px;
+        cursor: pointer;
     }
 
     //desktop nav stylesheet
     .desktop_nav_main {
         display: flex;
         flex-direction: row;
-        color: #ffffff;
+        color: #282828;
 
 
         .containerMain {
@@ -65,7 +67,7 @@
             font-size: 16px;
             color: #fff;
             border: none;
-            background-color: #FFEB00;
+            background-color: #033043;
             overflow: hidden;
             cursor: pointer;
             transition: color 0.4s ease;
@@ -93,18 +95,13 @@
 
     }
 
-
-
-
-
-
     //mobile Nav stylesheet
     .mobile_nav_main {
         display: none;
 
         .hamburger {
             font-size: 25px;
-            color:#e9e3d5
+            color:#282828
         }
 
         .nav {
