--- a/src/Components/MainCards/Cards.scss
+++ b/src/Components/MainCards/Cards.scss
@@ -46,13 +46,13 @@
 
         div {
             
-            background-color: #E9EFEC;
+            background-color: #c5d3e8;
             width: 350px;
             height: 350px;
             border-radius: 10px;
             display: flex;
             flex-direction: column;
-            color: #262D29;
+            color: #282828;
             box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
            
 
@@ -91,7 +91,7 @@
                 background-color: inherit;
                 border: none;
                 outline: none;
-                color: #39433E;
+                color: #282828;
                 transition: 500ms;
                
             }
@@ -128,8 +128,8 @@
                 }
 
                 button {
-                    background-color: #B2CCBF;
-                    color: #131615;
+                    background-color: #a6aebf;
+                    color: #282828;
                 }
             }
         }
@@ -152,8 +152,8 @@
                 }
 
                 button {
-                    background-color: #C9DABF;
-                    color: black;
+                    background-color: #a6aebf;
+                    color: #282828;
                     cursor: pointer;
                 }
             }
@@ -162,12 +162,12 @@
     }
 
     @include respond-to(small) {
-        margin-top: 110px;
+        margin-top: 72px;
     }
 }
 
 .contact_div {
-    background: linear-gradient(344deg, rgba(245,245,220,1) 11%, rgba(255,207,157,1) 80%);
+    background: linear-gradient(138deg, rgba(154,171,255,1) 11%, rgba(72,228,220,1) 80%);
     width: 100%;
     height: 300px;
     overflow: hidden;
@@ -178,7 +178,7 @@
     .sub_cnt_div {
         padding: auto;
         margin: 50px 30%;
-        color: black;
+        color: #282828;
 
         h4 {
             padding: 12px 0px;
@@ -215,7 +215,7 @@
         padding: 8px 24px;
         margin: 24px 0px;
         font-size: 16px;
-        color: black;
+        color: #282828;
         border: 2px solid #262D29;
         background-color: transparent;
         overflow: hidden;
@@ -250,7 +250,6 @@
 
     .cnt_btn:hover::before {
         left: 0;
-
     }
 
 
