--- a/src/Components/ProductDisplay/productpage.module.scss
+++ b/src/Components/ProductDisplay/productpage.module.scss
@@ -1,7 +1,7 @@
 @import '../../sass/Mixins.scss';
 
 .Main_containter{
-  margin-top: 120px;
+  margin: 120px 0px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -14,7 +14,7 @@
     display: flex;
     flex-direction: row;
     line-height: 1.5;
-    margin-left: 20px;
+    margin-left: 88px;
     @include respond-to(small){
       margin: 10px;
     }
@@ -26,6 +26,7 @@
     p:nth-child(2){
      font-size: 18px;  
      margin-top: 25px;
+     width: 70vw;
     }
     .span{
       display: flex;
@@ -42,42 +43,30 @@
     }
   }
 
-
   .slider_container {
+    margin-top: 0px;
     position: relative;
-   // width: 100%;
     width: 1200px;
-    height: 400px;
+    height: 300px;
     overflow: hidden;
     display: flex;
     flex-direction: row;
-    align-items: center;
-
-  
-  
-    
     .scroll_x {
       max-width: 100%;
       overflow-x: auto;
-      overscroll-behavior-x:auto;
-      // scrollbar-color: #2563eb #bfdbfe; 
-
       &::-webkit-scrollbar {
-        width: 8px; // Reduce scrollbar thickness
-        height: 8px; // For horizontal scrollbars
-      }
-    
+        width: 8px; 
+        height: 8px;
+        display: none;
+      }   
       &::-webkit-scrollbar-thumb {
         background-color: #2563eb; // Scrollbar thumb color
         border-radius: 10px; // Rounded scrollbar thumb
-      }
-    
+      }   
       &::-webkit-scrollbar-track {
         background-color: #bfdbfe; // Scrollbar track color
       }
-    }
-    
-    
+      } 
     .wrapper {
       --size: clamp(12rem, 1rem + 50vw, 20rem);
       --gutter: 2rem;
@@ -117,7 +106,7 @@
         border-radius: 0.5rem;
         img{
           width:100%;
-          height: 30vh;   
+          height: 210px;   
           cursor: pointer;
           border-radius: 10px;
       }
@@ -163,6 +152,21 @@
     }
     
 }
+.control_buttons{
+  position: absolute;
+  transform: translateX(50%);
+  left: 80%;
+  top:90%;
+  .scroll_button {
+    color: #282828;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    font-size: 32px;
+    border-radius: 4px;
+  
+}
+}
 .floating_card{
   position: absolute;
   top: 40px; 
@@ -189,11 +193,12 @@
 }
 
  @include respond-to(small){
-  margin: 5px;
+  margin: 48px 0px;
   .display_text{
     flex-direction: column;
     align-items: flex-start;
     line-height: 1.5;
+    margin-left: 16px;
     
     p:nth-child(1){
       font-size: 25px;
@@ -204,6 +209,7 @@
       font-weight:500;
       margin-top: 0;
       text-align: auto;
+      width:90vw;
       
     }
     .span{
@@ -216,9 +222,11 @@
     width: 100%;
     overflow: hidden;
   }
+  .control_buttons{
+  display: none;
+  }
   .floating_card{
   display: none;
-  
   }
  }
 }
