--- a/src/Components/Section/about.scss
+++ b/src/Components/Section/about.scss
@@ -1,12 +1,201 @@
 @import '../../sass/Mixins.scss';
 
 
+.grandpa-container{
+    background-color: #0f4841;
+    color: #FFFFFF;
+    margin-top: 64px;
+    h2{
+        text-align: center;
+        padding: 48px;
+        font-size: 36px;
+        color: #B6C4B6;
+        font-weight: 100;
+    }
+
+.remy-hair-container{
+    padding: 8px;
+    margin: 8px 0px;
+    height: 1800px;
+    z-index: 10;
+    position: relative;
+    top:0;
+    display: grid;
+    grid-template-columns: repeat(2,1fr); 
+
+    .parent-block{
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        left: 30%;
+    }
+    .block-1,.block-2,.block-3,.block-4{
+        position: relative;
+        z-index: 1;
+        padding: 16px;
+        width: 700px;
+        text-align: center;
+        margin: 24px auto;
+        background-color: #0c433d;
+        border-radius:12px;
+    }
+    .block-1{
+        h4{
+            font-size: 32px;
+            color: #f6ff7e;
+            font-weight: 200;
+        }
+        p{
+            padding: 8px;
+            line-height: 1.5;
+        }
+    }
+    .block-2{
+        span{
+            font-size: 16px;
+            text-align: left;
+            font-weight: 200;
+            color: #f6ff7e;
+        }
+        p{
+            text-align: justify;
+            padding: 16px;
+            line-height: 1.5;
+        }
+    }
+    .block-3{
+        p{
+            text-align: justify;
+            padding: 16px;
+            line-height: 1.5;
+        }
+        span{
+            font-size: 16px;
+            text-align: left;
+            font-weight: 200;
+            color: #f6ff7e;
+        }
+    }
+    .block-4{
+        margin-bottom: 48px;
+        p{
+            padding: 16px;
+            text-align: justify;
+            line-height: 1.5;
+        }
+        span{
+            color: #f6ff7e;
+        }
+    }
+    .animation-container {
+        position: relative; /* Makes sure the child (SVG) aligns to this */
+        height: 1700px;
+        width: 100px; /* Adjust as per your layout */
+    
+        svg {
+            position: absolute;
+            top: 50px;
+            left: 200px;
+            width: auto;
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            z-index: 0;
+        }
+        
+    }   
+}
+@include respond-to(small){
+    height: max-content;
+    h2{
+        padding: 4px;
+        font-size: 24px;
+        color: #B6C4B6;
+        font-weight: 100;
+        //width: 100% ;
+        text-transform: capitalize;
+    }
+    .remy-hair-container{
+        height: 2700px;
+        .parent-block{
+            left: 5%;
+        }
+        .block-1,.block-2,.block-3,.block-4{
+            position: relative;
+            z-index: 1;
+            padding: 8px;
+            width: 90vw;
+            text-align: center;
+            margin: 24px auto;
+            background-color: #0c433d;
+            border-radius:12px;
+        }
+        .block-1{
+            h4{
+                font-size: 16px;
+                color: #f6ff7e;
+                font-weight: 200;
+            }
+            p{
+                padding: 8px;
+                line-height: 1.2;
+                letter-spacing: normal;
+                word-spacing: normal;
+            }
+        }
+        .block-2{
+            span{
+                font-size: 16px;
+                text-align: left;
+                font-weight: 200;
+                color: #f6ff7e;
+            }
+            p{
+                //text-align: justify;
+                padding: 16px;
+                line-height: 1.5;
+                word-spacing: normal;
+            }
+        }
+        .block-3{
+            p{
+                //text-align: justify;
+                padding: 16px;
+                line-height: 1.3;
+                word-spacing: normal;
+            }
+            span{
+                font-size: 16px;
+                text-align: left;
+                font-weight: 200;
+                color: #f6ff7e;
+            }
+        }
+        .block-4{
+            margin-bottom: 48px;
+            p{
+                padding: 16px;
+                line-height: 1.3;
+                word-spacing: 0px;
+            }
+            span{
+                color: #f6ff7e;
+            }
+        }
+        
+        .animation-container {
+         display: none;     
+        }
+    }
+}
+
+}
 .Parent_container{
     display: grid;
     grid-template-columns: 2fr 4fr;
-    margin-top: 120px;
+    margin-top: 32px;
     position: relative;
-    margin-left:40px;
+    margin-left:88px;
   
 .container {
     position: relative;
@@ -90,13 +279,13 @@
         font-size: 16px;
         text-indent: 100px;
         text-align: justify;
-        color:#033043;
+        color:#282828;
         
     }
     .abt-btn{
         position: relative;
         display: inline-block;
-        background-color: #0a7273;
+        background-color: #033043;
         border: none;
         border-radius: 8px;
         padding: 8px 16px;
@@ -193,11 +382,11 @@
             font-size: 16px;
             text-indent: 30px;
             text-align: justify;
-            color:#387478;
+            color:#282828;
             text-transform: capitalize;  
         }
         .abt-btn{
-            background-color: #387478;
+            background-color: #033043;
             border: none;
             border-radius: 8px;
             padding: 8px 16px;
