--- a/src/Components/Section/blogs.scss
+++ b/src/Components/Section/blogs.scss
@@ -3,49 +3,37 @@
 h3 {
   text-transform: capitalize;
   padding: 16px;
+  margin-left: 72px;
+  font-size: 48px;
+  font-weight: 200;
+  color: #282828;
 }
 
 .Main_container {
-  display: flex;
-  flex-direction: row;
   padding: 24px 48px;
-  height: 500px;
-  width: 100%;
-  margin: 24px 0px;
-  overflow-x: auto;
- scroll-behavior: smooth;
-  &::-webkit-scrollbar {
-    height: 8px;
-    display: none;
-  }
-
-  &::-webkit-scrollbar-thumb {
-    background-color: #2563eb;
-    border-radius: 10px;
-
-  }
-
-  &::-webkit-scrollbar-track {
-    background-color: #e0e7ff;
-  }
+  height: 350px;
+  width: 80vw;
+  margin: auto;
 
   .blog-container {
     display: flex;
-    gap: 100px;
+    flex-direction: row;
+    justify-content: space-around;
+    //gap: 100px;
     padding: 10px;
+    width: 100%;
   }
 
   .blog_container {
-    flex: 0 0 300px;
-    overflow: hidden;
-    width: 400px;
-    height: 350px;
+
+    width: 300px;
+    height: 280px;
     background: linear-gradient(135deg, rgba(220, 245, 225, 1) 11%, rgba(243, 255, 157, 1) 80%);
     border-radius: 10px;
 
     img {
       width: 100%;
-      height: 200px;
+      height: 100px;
       object-fit: cover;
       border-top-left-radius: 10px;
       border-top-right-radius: 10px;
@@ -60,23 +48,35 @@ h3 {
     }
   }
 
-  @include respond-to(small) {
+
+}
+
+@include respond-to(small) {
+  h3 {
+    text-transform: capitalize;
+    padding: 16px;
+    margin-left: 8px;
+    font-size: 28px;
+    font-weight: 200;
+    color: #282828;
+  }
+  .Main_container {
     padding: 0 16px;
-    margin: 0;  
-    width: 100vw; 
-    overflow-x: auto;
+    
+    width: 100vw;
     height: fit-content;
 
     .blog-container {
-      gap: 20px;
       padding: 4px;
-    
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 24px;
     }
 
     .blog_container {
-      flex: 0 0 250px;
-      /* Ensure smaller items on mobile */
-      width: 250px;
+      width: 85vw;
     }
   }
 }
