--- a/src/Components/Section/section.scss
+++ b/src/Components/Section/section.scss
@@ -1,7 +1,7 @@
 @import '../../sass/Mixins.scss';
 
 .parent_container {
-    background-color: #718355;
+    background-color: #f5f5f5;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     position: relative;
     z-index: 0;
@@ -14,7 +14,7 @@
         align-items: flex-start;
         border-radius: 10px;
         z-index: 10;
-        margin-left: 20px;
+        margin-left: 24px;
 
         .introText {
             margin-top: 48px;
@@ -22,16 +22,15 @@
             max-width: 900px;
             padding-top: 10rem;
             padding-left: 64px;
-            // margin-left: 48px;
 
             .comName {
                 font-weight: 400;
                 text-transform: uppercase;
-                color: #E9F5D8;
+                color: #282828;
                 letter-spacing: 2PX;
 
                 span {
-                    color: #FFD116;
+                    color: #FA4032;
                     font-weight: bold;
                     font-size: 24px;
                     font-weight: 800;
@@ -43,7 +42,7 @@
                 text-transform: uppercase;
                 font-weight: 800;
                 margin: 0;
-                color: #e9e3d5;
+                color: #282828;
             }
 
             .subtext {
@@ -52,7 +51,7 @@
                 line-height: 1.3;
                 padding-top: 24px;
                 width: 80%;
-                color: #e9e3d5;
+                color: #282828;
             }
 
             .productBtn,
@@ -64,7 +63,7 @@
                 font-size: 20px;
                 cursor: pointer;
                 margin-top: 32px;
-                color: #e9e3d5;
+                color: #282828;
 
             }
 
@@ -76,7 +75,7 @@
                 font-size: 16px;
                 color: #ffffff;
                 border: none;
-                background-color: #ffeb00;
+                background-color: #033043;
                 overflow: hidden;
                 cursor: pointer;
                 -webkit-tap-highlight-color: transparent;
@@ -98,61 +97,65 @@
                 transform: translateY(-1px);
             }
 
-
-
             .productBtn1 {
                 background: none;
                 margin-left: 24px;
             }
         }
- 
-        .imgContainer{
-                height: fit-content;
-                display: grid;  
-                margin-top: 120px;
-                padding-top: 48px;
-                gap:4px;
-                grid-template-columns: repeat(2,1fr);
-                
-        img {
-            object-fit: fill;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);    
-        }
-        .Child_div {
-            border-radius: 10px;
-        }
-        .Child_div:nth-child(1) {
-            img {
-                width: 280px;
-                height: 280px;
-            }
-        }
 
-        .Child_div:nth-child(2) {
-            justify-self: left;
-            align-self: flex-end;
+        .imgContainer {
+            height: fit-content;
+            display: grid;
+            margin-top: 120px;
+            padding-top: 48px;
+            gap: 4px;
+            grid-template-columns: repeat(2, 1fr);
+
             img {
-                width: 140px;
-                height: 140px;
+                object-fit: fill;
+                border-radius: 10px;
+                box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
             }
-        }
-        .Child_div:nth-child(3) {
-            justify-self: right;
-            align-self: flex-start;
-            img {
-                width: 100px;
-                height: 100px;
+
+            .Child_div {
+                border-radius: 10px;
             }
-        }
-        .Child_div:nth-child(4) {
-            img {
-                width: 250px;
-                height: 220px;
+
+            .Child_div:nth-child(1) {
+                img {
+                    width: 280px;
+                    height: 280px;
+                }
+            }
+
+            .Child_div:nth-child(2) {
+                justify-self: left;
+                align-self: flex-end;
+
+                img {
+                    width: 140px;
+                    height: 140px;
+                }
+            }
+
+            .Child_div:nth-child(3) {
+                justify-self: right;
+                align-self: flex-start;
+
+                img {
+                    width: 100px;
+                    height: 100px;
+                }
+            }
+
+            .Child_div:nth-child(4) {
+                img {
+                    width: 250px;
+                    height: 220px;
+                }
             }
         }
     }
-}
 
     .waveSVG {
         z-index: -1;
@@ -170,7 +173,6 @@
 
         .main_container {
             flex-direction: column-reverse;
-            //justify-content: space-around;
             align-items: center;
             height: fit-content;
             padding: 8px;
@@ -208,6 +210,16 @@
                     font-size: 16px;
                     margin-left: 4px;
                     margin-bottom: 24px;
+                }
+
+
+                .productBtn:hover,
+                .productBtn:focus {
+                    background-color: white;
+                }
+
+                .productBtn:active {
+                    background-color: white;
                 }
             }
 
