--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,14 @@
     box-sizing: border-box;
     margin: 0;
 }
+html {
+    touch-action: manipulation;
+    -webkit-tap-highlight-color: transparent;
+  }
+  
 body{
     font-family: "Varela Round", sans-serif;
     /* background-color: #f6f9fd; */
-    background-color: #e3edf8;
+    background-color: #F0F0F0;
   
 }
