--- a/src/Components/Category/CategoryMain.scss
+++ b/src/Components/Category/CategoryMain.scss
@@ -75,14 +75,14 @@
       .cat_btn {
         border: 2px solid #B31312;
         outline: none;
-        border-radius: 24px;
-        padding: 8px;
-        font-size: 16px;
-        width: 130px;
+        border-radius: 50%;
+        padding: 12px;
+        font-size: 20px;
+        width:fit-content;
         color: #B31312;
         position: relative;
         bottom: 15px;
-        left: 60%;
+        left: 80%;
         cursor: pointer;
         overflow: hidden;
         transition: color 0.4s ease;
@@ -99,7 +99,7 @@
         background: #B31312;
         transition: left 0.4s ease;
         z-index: -1;
-        border-radius: 24px;
+        border-radius: 50%;
         /* Ensures the background follows the border-radius */
       }
 
@@ -111,6 +111,9 @@
         left: 0;
       }
 
+     &:hover{
+      background-color: #E4E0E1;
+     }
 
     }
   }
